kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: findjob-ingress
  namespace: findjob
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: findjob.cloudzcp.io
    http:
      paths:
      - path: /company
        backend:
          serviceName: findjob-company-service
          servicePort: 9999
      - path: /recruit
        backend:
          serviceName: findjob-recruit-service
          servicePort: 10000
      - path: /applicant
        backend:
          serviceName: findjob-applicant-service
          servicePort: 10001
